--- a/index.html
+++ b/index.html
@@ -9,16 +9,33 @@
 <body>
     <h1>Music Player App</h1>
     <div class="grid-container">
-        <div class="box">Song 1</div>
-        <div class="box">Song 2</div>
-        <div class="box">Song 3</div>
-        <div class="box">Song 4</div>
-        <div class="box">Song 5</div>
-        <div class="box">Song 6</div>
+        <div class="box">
+            <img src="images/song1.jpg" alt="Song 1">
+        </div>
+        <div class="box">
+            <img src="images/song2.jpg" alt="Song 2">
+        </div>
+        <div class="box">
+            <img src="images/song3.jpg" alt="Song 3">
+        </div>
+        <div class="box">
+            <img src="images/song4.jpg" alt="Song 4">
+        </div>
+        <div class="box">
+            <img src="images/song5.jpg" alt="Song 5">
+        </div>
+        <div class="box">
+            <img src="images/song6.jpg" alt="Song 6">
+        </div>
+    </div>
+    <div class="album-cover">
+        <div class="box">
+            <img src="images/album.jpg" alt="Album Cover">
+        </div>
     </div>
     <div class="music-controls">
         <audio id="audio-player" controls>
-            <source src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav" type="audio/wav"> <!-- Dummy audio file; replace with actual song URL -->
+            <source src="audio/song1.wav" type="audio/wav">
             Your browser does not support the audio element.
         </audio>
         <button id="play-pause-btn">Play</button>
