Update audio source to new MP3 file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="music-controls">
         <audio id="audio-player" controls>
-            <source src="audio/song1.wav" type="audio/wav">
+            <source src="audio/where we.mp3" type="audio/wav">
             Your browser does not support the audio element.
         </audio>
         <button id="play-pause-btn">Play</button>
