Update album cover and audio source files

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     </div>
     <div class="album-cover">
         <div class="box">
-            <img src="images/album.jpg" alt="Album Cover">
+            <img src="images/ngapainrepot.jpg" alt="Album Cover">
         </div>
     </div>
     <div class="music-controls">
         <audio id="audio-player" controls>
-            <source src="audio/where we.mp3" type="audio/wav">
+            <source src="audio/ngapainrepot.mp3" type="audio/wav">
             Your browser does not support the audio element.
         </audio>
         <button id="play-pause-btn">Play</button>
