--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="album-cover">
         <div class="box">
-            <img src="images/ngapainrepot.jpg" alt="Album Cover">
+            <img src="image/ngapainrepot.jpg" alt="Album Cover">
         </div>
     </div>
     <div class="music-controls">
