--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/200x200?text=Image+1" alt="Image 1">
+        <img src="image/ngapainrepot.jpg" alt="Image 1">
         <h3>Judul Lagu 1</h3>
         <hr>
-        <audio id="audio1" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav"></audio> <!-- Placeholder audio, ganti dengan URL lagu asli -->
+        <audio id="audio1" src="audio/ngapainrepot.mp3"></audio> <!-- Placeholder audio, ganti dengan URL lagu asli -->
         <button onclick="togglePlay(1)">Play/Pause</button>
     </div>
 
