--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             font-size: 2.5em;
             margin-bottom: 10px;
             text-align: center;
-            color: #fff; /* Warna putih untuk kontras lebih rendah */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), 0 0 10px rgba(255, 255, 255, 0.5); /* Bayangan hitam untuk kontras, glow putih halus */
+            color: #00ffff; /* Warna neon cyan gelap */
+            text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff, 0 0 30px #00ffff; /* Efek glow neon */
             white-space: nowrap;
             overflow: hidden;
-            border-right: 3px solid #fff; /* Kursor typing putih */
+            border-right: 3px solid #00ffff; /* Kursor typing */
             width: 0;
             animation: typing 3s steps(30, end) forwards, blink 1s infinite; /* Animasi typing dan blink kursor */
         }
@@ -44,18 +44,18 @@
 
         @keyframes blink {
             from, to { border-color: transparent; }
-            50% { border-color: #fff; }
+            50% { border-color: #00ffff; }
         }
 
         .description {
             font-size: 1.2em;
             margin-bottom: 30px;
             text-align: center;
-            color: #fff; /* Warna putih untuk kontras lebih rendah */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), 0 0 10px rgba(255, 255, 255, 0.5); /* Bayangan hitam untuk kontras, glow putih halus */
+            color: #ff00ff; /* Warna neon magenta gelap */
+            text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff; /* Efek glow neon */
             white-space: nowrap;
             overflow: hidden;
-            border-right: 3px solid #fff; /* Kursor typing putih */
+            border-right: 3px solid #ff00ff; /* Kursor typing */
             width: 0;
             animation: typingDesc 5s steps(60, end) forwards 3s, blinkDesc 1s infinite 8s; /* Animasi typing dimulai setelah judul, dan blink */
         }
@@ -67,7 +67,7 @@
 
         @keyframes blinkDesc {
             from, to { border-color: transparent; }
-            50% { border-color: #fff; }
+            50% { border-color: #ff00ff; }
         }
 
         .containers {
@@ -84,6 +84,7 @@
             background-color: #fff;
             border-radius: 10px;
             padding: 10px;
+            border: 2px solid rgba(0, 255, 255, 0.5); /* Garis pada container */
             box-shadow: 0 0 20px rgba(0, 255, 255, 0.7); /* Efek glow cyan */
             display: flex;
             flex-direction: column;
@@ -128,10 +129,35 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
+            transition: background-color 0.3s;
         }
 
         button:hover {
             background-color: #0056b3;
+        }
+
+        .bars {
+            display: flex;
+            align-items: end;
+            justify-content: center;
+            gap: 2px;
+            height: 20px;
+        }
+
+        .bars div {
+            width: 4px;
+            background-color: #007bff;
+            animation: wave 1s ease-in-out infinite;
+        }
+
+        .bars div:nth-child(1) { animation-delay: 0s; }
+        .bars div:nth-child(2) { animation-delay: 0.1s; }
+        .bars div:nth-child(3) { animation-delay: 0.2s; }
+        .bars div:nth-child(4) { animation-delay: 0.3s; }
+
+        @keyframes wave {
+            0%, 100% { height: 5px; }
+            50% { height: 20px; }
         }
     </style>
 </head>
@@ -188,10 +214,10 @@
 
             if (audio.paused) {
                 audio.play();
-                button.textContent = 'Pause';
+                button.innerHTML = '<div class="bars"><div></div><div></div><div></div><div></div></div>';
             } else {
                 audio.pause();
-                button.textContent = 'Play';
+                button.innerHTML = 'Play/Pause';
             }
         }
     </script>
