--- a/index.html
+++ b/index.html
@@ -1,225 +1,262 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5 Containers with Images, Titles, and Audio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1, #f9ca24, #f0932b);
-            background-size: 400% 400%;
-            animation: gradientShift 10s ease infinite;
-            color: #333;
-            min-height: 100vh;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>koleksi lagu</title>
 
-        @keyframes gradientShift {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
+<style>
+/* ===== base ===== */
+body {
+    font-family: arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    min-height: 100vh;
+    background: linear-gradient(45deg,#ff6b6b,#4ecdc4,#45b7d1,#f9ca24,#f0932b);
+    background-size: 400% 400%;
+    animation: gradientShift 10s ease infinite;
+    transition: background .6s,color .4s;
+}
 
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            text-align: center;
-            color: #00ffff; /* Warna neon cyan gelap */
-            text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff, 0 0 30px #00ffff; /* Efek glow neon */
-            white-space: nowrap;
-            overflow: hidden;
-            border-right: 3px solid #00ffff; /* Kursor typing */
-            width: 0;
-            animation: typing 3s steps(30, end) forwards, blink 1s infinite; /* Animasi typing dan blink kursor */
-        }
+@keyframes gradientShift {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
 
-        @keyframes typing {
-            from { width: 0; }
-            to { width: 100%; }
-        }
+/* ===== theme toggle ===== */
+.theme-toggle{
+    position:fixed;
+    top:15px;
+    right:15px;
+    width:55px;
+    height:28px;
+    background:rgba(255,255,255,.25);
+    border-radius:50px;
+    cursor:pointer;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:0 6px;
+    backdrop-filter:blur(10px);
+    z-index:999;
+}
+.theme-toggle span{
+    font-size:14px;
+    transition:.3s;
+}
+body.light .moon{opacity:0;transform:scale(0)}
+body:not(.light) .sun{opacity:0;transform:scale(0)}
 
-        @keyframes blink {
-            from, to { border-color: transparent; }
-            50% { border-color: #00ffff; }
-        }
+/* ===== title ===== */
+h1{
+    font-size:2.4em;
+    margin-bottom:10px;
+    color:#e0ffff;
+    text-shadow:0 0 6px rgba(0,255,255,.6),0 0 14px rgba(0,255,255,.4);
+    white-space:nowrap;
+    overflow:hidden;
+    border-right:3px solid rgba(0,255,255,.7);
+    width:0;
+    animation:typing 3s steps(30,end) forwards,blink 1s infinite;
+}
 
-        .description {
-            font-size: 1.2em;
-            margin-bottom: 30px;
-            text-align: center;
-            color: #ff00ff; /* Warna neon magenta gelap */
-            text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff; /* Efek glow neon */
-            white-space: nowrap;
-            overflow: hidden;
-            border-right: 3px solid #ff00ff; /* Kursor typing */
-            width: 0;
-            animation: typingDesc 5s steps(60, end) forwards 3s, blinkDesc 1s infinite 8s; /* Animasi typing dimulai setelah judul, dan blink */
-        }
+.description{
+    font-size:1.1em;
+    margin-bottom:30px;
+    color:#ffd6ff;
+    text-shadow:0 0 6px rgba(255,0,255,.5),0 0 12px rgba(255,0,255,.4);
+    white-space:nowrap;
+    overflow:hidden;
+    border-right:3px solid rgba(255,0,255,.6);
+    width:0;
+    animation:typingDesc 5s steps(60,end) forwards 3s,blinkDesc 1s infinite 8s;
+}
 
-        @keyframes typingDesc {
-            from { width: 0; }
-            to { width: 100%; }
-        }
+@keyframes typing{to{width:100%}}
+@keyframes typingDesc{to{width:100%}}
+@keyframes blink{50%{border-color:transparent}}
+@keyframes blinkDesc{50%{border-color:transparent}}
 
-        @keyframes blinkDesc {
-            from, to { border-color: transparent; }
-            50% { border-color: #ff00ff; }
-        }
+/* ===== containers ===== */
+.containers{
+    display:flex;
+    flex-wrap:wrap;
+    gap:20px;
+    justify-content:center;
+}
 
-        .containers {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
+.container{
+    width:200px;
+    aspect-ratio:9/16;
+    background:#fff;
+    border-radius:12px;
+    padding:10px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    border:2px solid rgba(0,255,255,.4);
+    box-shadow:0 0 20px rgba(0,255,255,.6);
+}
 
-        .container {
-            width: 200px; /* Lebar tetap, tinggi akan mengikuti aspect ratio 9:16 */
-            aspect-ratio: 9 / 16;
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 10px;
-            border: 2px solid rgba(0, 255, 255, 0.5); /* Garis pada container */
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.7); /* Efek glow cyan */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            transition: box-shadow 0.3s ease;
-        }
+img{
+    width:100%;
+    aspect-ratio:1/1;
+    object-fit:cover;
+    border-radius:8px;
+}
 
-        .container:hover {
-            box-shadow: 0 0 30px rgba(0, 255, 255, 1); /* Glow lebih kuat saat hover */
-        }
+h3{margin:10px 0}
+hr{width:80%}
 
-        img {
-            width: 100%;
-            aspect-ratio: 1 / 1;
-            object-fit: cover;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
+audio{display:none}
 
-        h3 {
-            font-size: 16px;
-            text-align: center;
-            margin: 10px 0;
-            color: #333;
-        }
+/* ===== button ===== */
+button{
+    width:48px;
+    height:48px;
+    border-radius:50%;
+    background:rgba(0,123,255,.9);
+    border:none;
+    cursor:pointer;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    box-shadow:0 0 15px rgba(0,123,255,.8);
+    transition:.3s;
+}
+button:hover{
+    transform:scale(1.1);
+    box-shadow:0 0 25px rgba(0,123,255,1);
+}
 
-        hr {
-            width: 80%;
-            border: 1px solid #ccc;
-            margin: 10px 0;
-        }
+/* icons */
+.play-icon{
+    width:0;
+    height:0;
+    border-left:14px solid white;
+    border-top:8px solid transparent;
+    border-bottom:8px solid transparent;
+}
 
-        audio {
-            display: none; /* Sembunyikan audio default, gunakan JS untuk kontrol */
-        }
+/* equalizer */
+.bars{
+    display:flex;
+    align-items:flex-end;
+    gap:4px;
+    height:22px;
+}
+.bars div{
+    width:4px;
+    height:6px;
+    background:white;
+    animation:wave .9s ease-in-out infinite;
+    border-radius:2px;
+}
+.bars div:nth-child(2){animation-delay:.1s}
+.bars div:nth-child(3){animation-delay:.2s}
+.bars div:nth-child(4){animation-delay:.3s}
 
-        button {
-            padding: 8px 16px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-            transition: background-color 0.3s;
-        }
+@keyframes wave{
+    0%{height:6px}
+    50%{height:22px}
+    100%{height:6px}
+}
 
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        .bars {
-            display: flex;
-            align-items: end;
-            justify-content: center;
-            gap: 2px;
-            height: 20px;
-        }
-
-        .bars div {
-            width: 4px;
-            background-color: #007bff;
-            animation: wave 1s ease-in-out infinite;
-        }
-
-        .bars div:nth-child(1) { animation-delay: 0s; }
-        .bars div:nth-child(2) { animation-delay: 0.1s; }
-        .bars div:nth-child(3) { animation-delay: 0.2s; }
-        .bars div:nth-child(4) { animation-delay: 0.3s; }
-
-        @keyframes wave {
-            0%, 100% { height: 5px; }
-            50% { height: 20px; }
-        }
-    </style>
+/* ===== light mode ===== */
+body.light{
+    background:linear-gradient(45deg,#f8f9fa,#e3f2fd,#e0f7fa,#fffde7,#fff3e0);
+}
+body.light h1{
+    color:#0066ff;
+    text-shadow:0 0 6px rgba(0,102,255,.5);
+}
+body.light .description{
+    color:#8e24aa;
+    text-shadow:0 0 6px rgba(142,36,170,.4);
+}
+body.light .container{
+    box-shadow:0 0 15px rgba(0,123,255,.3);
+}
+</style>
 </head>
+
 <body>
-    <h1>Selamat Datang di Koleksi Lagu</h1>
-    <p class="description">Nikmati koleksi lagu favorit Anda dengan gambar dan kontrol audio yang mudah. Klik tombol Play/Pause untuk mendengarkan!</p>
-    
-    <div class="containers">
-        <div class="container">
-            <img src="image/ngapainrepot.jpg" alt="Image 1">
-            <h3>Judul Lagu 1</h3>
-            <hr>
-            <audio id="audio1" src="audio/ngapainrepot.mp3"></audio> <!-- Placeholder audio, ganti dengan URL lagu asli -->
-            <button onclick="togglePlay(1)">Play/Pause</button>
-        </div>
 
-        <div class="container">
-            <img src="https://via.placeholder.com/200x200?text=Image+2" alt="Image 2">
-            <h3>Judul Lagu 2</h3>
-            <hr>
-            <audio id="audio2" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav"></audio> <!-- Placeholder audio -->
-            <button onclick="togglePlay(2)">Play/Pause</button>
-        </div>
+<div class="theme-toggle" onclick="toggleTheme()">
+    <span class="sun">☀</span>
+    <span class="moon">🌙</span>
+</div>
 
-        <div class="container">
-            <img src="https://via.placeholder.com/200x200?text=Image+3" alt="Image 3">
-            <h3>Judul Lagu 3</h3>
-            <hr>
-            <audio id="audio3" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav"></audio> <!-- Placeholder audio -->
-            <button onclick="togglePlay(3)">Play/Pause</button>
-        </div>
+<h1>selamat datang di koleksi lagu</h1>
+<p class="description">nikmati lagu favorit dengan tampilan neon modern</p>
 
-        <div class="container">
-            <img src="https://via.placeholder.com/200x200?text=Image+4" alt="Image 4">
-            <h3>Judul Lagu 4</h3>
-            <hr>
-            <audio id="audio4" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav"></audio> <!-- Placeholder audio -->
-            <button onclick="togglePlay(4)">Play/Pause</button>
-        </div>
+<div class="containers">
 
-        <div class="container">
-            <img src="https://via.placeholder.com/200x200?text=Image+5" alt="Image 5">
-            <h3>Judul Lagu 5</h3>
-            <hr>
-            <audio id="audio5" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav"></audio> <!-- Placeholder audio -->
-            <button onclick="togglePlay(5)">Play/Pause</button>
-        </div>
-    </div>
+<div class="container">
+<img src="image/ngapainrepot.jpg">
+<h3>judul lagu 1</h3>
+<hr>
+<audio id="audio1" src="audio/ngapainrepot.mp3"></audio>
+<button onclick="togglePlay(1)"><div class="play-icon"></div></button>
+</div>
 
-    <script>
-        function togglePlay(id) {
-            const audio = document.getElementById('audio' + id);
-            const button = audio.nextElementSibling; // Tombol setelah audio
+<div class="container">
+<img src="https://via.placeholder.com/200">
+<h3>judul lagu 2</h3>
+<hr>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
 
-            if (audio.paused) {
-                audio.play();
-                button.innerHTML = '<div class="bars"><div></div><div></div><div></div><div></div></div>';
-            } else {
-                audio.pause();
-                button.innerHTML = 'Play/Pause';
-            }
-        }
-    </script>
+</div>
+
+<script>
+let currentAudio=null;
+let currentButton=null;
+let beatInterval=null;
+
+function togglePlay(id){
+    const audio=document.getElementById("audio"+id);
+    const button=audio.nextElementSibling;
+
+    if(currentAudio && currentAudio!==audio){
+        currentAudio.pause();
+        currentAudio.currentTime=0;
+        currentButton.innerHTML='<div class="play-icon"></div>';
+        clearInterval(beatInterval);
+    }
+
+    if(audio.paused){
+        audio.play();
+        button.innerHTML='<div class="bars"><div></div><div></div><div></div><div></div></div>';
+        currentAudio=audio;
+        currentButton=button;
+
+        beatInterval=setInterval(()=>{
+            button.querySelectorAll(".bars div").forEach(bar=>{
+                bar.style.backgroundColor=`hsl(${Math.random()*360},100%,60%)`;
+            });
+        },120);
+
+        audio.onended=()=>{
+            button.innerHTML='<div class="play-icon"></div>';
+            clearInterval(beatInterval);
+        };
+    }else{
+        audio.pause();
+        audio.currentTime=0;
+        button.innerHTML='<div class="play-icon"></div>';
+        clearInterval(beatInterval);
+    }
+}
+
+function toggleTheme(){
+    document.body.classList.toggle("light");
+}
+</script>
+
 </body>
 </html>
